--- a/ShotKeeper/ShotKeeper/Views/MainPage.xaml
+++ b/ShotKeeper/ShotKeeper/Views/MainPage.xaml
@@ -84,12 +84,12 @@
 
 
         <!-- Remove Buttons -->
-        <Button x:Name="RemoveShotCountedFreeThrow"    Style="{StaticResource plainButton}" Text="-" Grid.Row="5" Grid.Column="0"/>
-        <Button x:Name="RemoveShotMissedFreeThrow"     Style="{StaticResource plainButton}" Text="-" Grid.Row="5" Grid.Column="1"/>
-        <Button x:Name="RemoveShotCountedMidRange"     Style="{StaticResource plainButton}" Text="-" Grid.Row="5" Grid.Column="2"/>
-        <Button x:Name="RemoveShotMissedMidRange"      Style="{StaticResource plainButton}" Text="-" Grid.Row="5" Grid.Column="3"/>
-        <Button x:Name="RemoveShotCountedThreePointer" Style="{StaticResource plainButton}" Text="-" Grid.Row="5" Grid.Column="4"/>
-        <Button x:Name="RemoveShotMissedThreePointer"  Style="{StaticResource plainButton}" Text="-" Grid.Row="5" Grid.Column="5"/>
+        <Button x:Name="RemoveShotCountedFreeThrow"    Style="{StaticResource plainButton}" Text="-" Grid.Row="5" Grid.Column="0" Command="{Binding RemoveCommand}" CommandParameter="CountedFreeThrow"/>
+        <Button x:Name="RemoveShotMissedFreeThrow"     Style="{StaticResource plainButton}" Text="-" Grid.Row="5" Grid.Column="1" Command="{Binding RemoveCommand}" CommandParameter="FreeThrow"/>
+        <Button x:Name="RemoveShotCountedMidRange"     Style="{StaticResource plainButton}" Text="-" Grid.Row="5" Grid.Column="2" Command="{Binding RemoveCommand}" CommandParameter="CountedMidRange"/>
+        <Button x:Name="RemoveShotMissedMidRange"      Style="{StaticResource plainButton}" Text="-" Grid.Row="5" Grid.Column="3" Command="{Binding RemoveCommand}" CommandParameter="MidRange"/>
+        <Button x:Name="RemoveShotCountedThreePointer" Style="{StaticResource plainButton}" Text="-" Grid.Row="5" Grid.Column="4" Command="{Binding RemoveCommand}" CommandParameter="CountedThreePointer"/>
+        <Button x:Name="RemoveShotMissedThreePointer"  Style="{StaticResource plainButton}" Text="-" Grid.Row="5" Grid.Column="5" Command="{Binding RemoveCommand}" CommandParameter="ThreePointer"/>
       </Grid>
     </ScrollView>
   </ContentPage.Content>
