--- a/ShotKeeper/ShotKeeper/App.xaml
+++ b/ShotKeeper/ShotKeeper/App.xaml
@@ -3,5 +3,17 @@
                         xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                         xmlns:prism="clr-namespace:Prism.Unity;assembly=Prism.Unity.Forms"
                         x:Class="ShotKeeper.App">
-
+  <Application.Resources>
+    <ResourceDictionary>
+      <Style x:Key="buttonStyle" TargetType="Button">
+        <Setter Property="HorizontalOptions" Value="Center" />
+        <Setter Property="VerticalOptions" Value="CenterAndExpand" />
+        <Setter Property="BorderColor" Value="Lime" />
+        <Setter Property="BorderRadius" Value="5" />
+        <Setter Property="BorderWidth" Value="5" />
+        <Setter Property="WidthRequest" Value="200" />
+        <Setter Property="TextColor" Value="Teal" />
+      </Style>
+    </ResourceDictionary>
+  </Application.Resources>
 </prism:PrismApplication>
