--- a/ShotKeeper/ShotKeeper/Views/SessionsPage.xaml
+++ b/ShotKeeper/ShotKeeper/Views/SessionsPage.xaml
@@ -44,13 +44,13 @@
             <DataTemplate>
                 <ViewCell>
                     <StackLayout Padding="10">
-                        <StackLayout Orientation="Horizontal" >
-                            <Label Text="{Binding CreatedTime, StringFormat='Created\: {0:d} {0:t}'}" Style="{DynamicResource BodyStyle}" />
-                            <Label Text="{Binding LastModified, StringFormat='Last Modified\: {0:d} {0:t}'}" Style="{DynamicResource BodyStyle}"/>
+                        <StackLayout Orientation="Horizontal">
+                            <Label Text="{Binding CreatedTime, StringFormat='Created\: {0:d} {0:t}'}" FontSize="Medium" />
+                            <Label Text="{Binding LastModified, StringFormat='Last Modified\: {0:d} {0:t}'}" FontSize="Medium" />
                         </StackLayout>
                         <StackLayout Orientation="Horizontal">
-                            <Label Text="{Binding TotalShotsCounted, StringFormat='Total Shots Counted\: {0}'}" Style="{DynamicResource CaptionStyle}" />
-                            <Label Text="{Binding TotalShots, StringFormat='Total Shots\: {0}'}" Style="{DynamicResource CaptionStyle}"/>
+                            <Label Text="{Binding TotalShotsCounted, StringFormat='Total Shots Counted\: {0}'}" FontSize="Small" />
+                            <Label Text="{Binding TotalShots, StringFormat='Total Shots\: {0}'}" FontSize="Small"/>
                         </StackLayout>
                     </StackLayout>
                 </ViewCell>
