--- a/ShotKeeper/ShotKeeper/Views/SessionsPage.xaml
+++ b/ShotKeeper/ShotKeeper/Views/SessionsPage.xaml
@@ -6,7 +6,7 @@
              x:Class="ShotKeeper.Views.SessionsPage"
              Title="Sessions">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="NEW" Command="{Binding AddCommand}" Icon="Assets/ic_add.png" Order="Primary"/>
+        <ToolbarItem Text="NEW" Command="{Binding AddCommand}" Order="Primary"/>
     </ContentPage.ToolbarItems>
     <ListView ItemsSource="{Binding ShootingSessionsGrouped}"
             SelectedItem="{Binding SelectedShootingSession, Mode=TwoWay}"
