--- a/ShotKeeper/ShotKeeper/Views/ShootingSessionListPage.xaml
+++ b/ShotKeeper/ShotKeeper/Views/ShootingSessionListPage.xaml
@@ -5,36 +5,31 @@
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="ShotKeeper.Views.ShootingSessionListPage">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Name="+" Command="{Binding AddCommand}"></ToolbarItem>
+        <ToolbarItem Name="New" Command="{Binding NewCommand}"></ToolbarItem>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Label Text="Title" FontSize="Large" Grid.Row="0" Grid.Column="0"/>
-            <ListView x:Name="listView" Grid.Row="0" Grid.Column="1" ItemsSource="{Binding ShootingSessionsList}" SelectedItem="{Binding SelectedShootingSession}" VerticalOptions="FillAndExpand" SeparatorVisibility="Default">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <ViewCell.ContextActions>
-                                <MenuItem Text="Delete" Command="{Binding DeleteCommand}" />
-                            </ViewCell.ContextActions>
-                            <StackLayout>
-                                <Label Text="{Binding Title}" FontSize="Large"/>
-                                <StackLayout Orientation="Horizontal">
-                                    <Label Text="Last Modified: " FontAttributes="Italic"/>
-                                    <Label Text="{Binding LastModified}" FontAttributes="Italic"/>
-                                </StackLayout>
+        <ListView x:Name="listView" ItemsSource="{Binding ShootingSessionList}" SelectedItem="{Binding SelectedShootingSession}" 
+                  VerticalOptions="FillAndExpand" SeparatorVisibility="Default">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <ViewCell.ContextActions>
+                            <MenuItem Text="Delete" Command="{Binding DeleteCommand}" />
+                        </ViewCell.ContextActions>
+                        <StackLayout>
+                            <Label Text="{Binding ID}" FontSize="Large"/>
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="TotalShots: " FontAttributes="Italic"/>
+                                <Label Text="{Binding TotalShotsCounted}" FontAttributes="Italic"/>
+                                <Label Text="/" FontAttributes="Italic"/>
+                                <Label Text="{Binding TotalShots}" FontAttributes="Italic"/>
+                                <Label Text="Last Modified: " FontAttributes="Italic"/>
+                                <Label Text="{Binding LastModified}" FontAttributes="Italic"/>
                             </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </Grid>
+                        </StackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </ContentPage.Content>
 </ContentPage>
