--- a/ShotKeeper/ShotKeeper/Views/ShotKeeperCarouselPage.xaml
+++ b/ShotKeeper/ShotKeeper/Views/ShotKeeperCarouselPage.xaml
@@ -6,7 +6,7 @@
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="ShotKeeper.Views.ShotKeeperCarouselPage">
 
-    <SK:ShotKeeperPage/>
+    <SK:ShootingSessionPage/>
     <SK:ShotKeeperPage1/>
 
 </CarouselPage>
